2010-08-17  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.7: Fix typo.
	
2010-07-01  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-11-1
	
2010-06-01  Albert Chu  <chu11@llnl.gov>

	* /etc/cerebro.conf: New file.

	* man/cerebro.conf.5.in: Minor fixes.

	* Update build system appropriately for changes.
	
2010-04-07  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-10-1

2010-04-06  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/: Fix debug output race condition between event
	server and listener threads.
	
2010-02-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_event_update.c
	(cerebrod_event_modules_setup): Fix bug which did not allow
	multiple events.
	
2010-02-04  Albert Chu  <chu11@llnl.gov>
	
	* man/cerebro_module_devel.3.in: Fix typo.
	
2010-02-01  Albert Chu  <chu11@llnl.gov>

	* Update copyrights globally.
	
2009-11-04  Albert Chu  <chu11@llnl.gov>

	* Fix up comments/docs, i.e. != e.g.
	
2009-10-16  Albert Chu  <chu11@llnl.gov>

	* src/libs/wrappers/wrappers_ltdl.c, src/libs/wrappers/wrappers.h:
	Remove ltdl wrapper functions which are unused.
	
2009-10-16  Albert Chu  <chu11@llnl.gov>

	* Fix RHEL6/FC11 build issues.
	
2009-08-11  Albert Chu  <chu11@llnl.gov>

	* Include headers to fix portability.
	
2009-05-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/hash.h, src/libs/common/hash.c (hash_remove_if):
	New function.

	* src/cerebrod/cerebrod_util.c (cerebrod_rehash): Fix rehash
	corner case.
	
2009-05-15  Albert Chu  <chu11@llnl.gov>

        * Add comments for clarification.

2009-02-26  Albert Chu  <chu11@llnl.gov>

	* etc/cerebrod: By default, do not have cerebrod on.
	
	* META, NEWS: update for release

	* tagged cerebro-1-9-1

2009-01-12  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-8-1

2008-12-05  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Change default to not build with genders
	support.
	