@@ -180,7 +180,7 @@ monitor_modules_load(void)
                                                                                     
   if (!(handle = (struct monitor_module *)malloc(sizeof(struct monitor_module))))
     {
-      CEREBRO_DBG(("malloc: %s", strerror(errno)));
+      CEREBRO_ERR(("malloc: %s", strerror(errno)));
       return NULL;
     }
   memset(handle, '\0', sizeof(struct monitor_module));
@@ -190,14 +190,14 @@ monitor_modules_load(void)
 #if !WITH_STATIC_MODULES
   if (!(handle->dl_handles = vector_create((VectorDelF)lt_dlclose)))
     {
-      CEREBRO_DBG(("vector_create: %s", strerror(errno)));
+      CEREBRO_ERR(("vector_create: %s", strerror(errno)));
       goto cleanup;
     }
 #endif /* !WITH_STATIC_MODULES */
   
   if (!(handle->module_infos = vector_create(NULL)))
     {
-      CEREBRO_DBG(("vector_create: %s", strerror(errno)));
+      CEREBRO_ERR(("vector_create: %s", strerror(errno)));
       goto cleanup;
     }
 
